NXT-4251: Enable and fix 'share component' tests
NXT-4251 ('Reveal in explorer' after component sharing in browser does not work)